<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:keepScreenOn="true"
    tools:context="com.gamesonsteroids.angelsanddemons.app.CreateTeamActivity">

    <include layout="@layout/fragment_game_header"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/your_turn"
            android:id="@+id/create_team_leader"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/remaining_team_members"
            android:id="@+id/create_team_members"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


    <ListView
        android:id="@+id/create_team_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:focusable="false"
        android:layout_weight="1.0"
        />

    <Button
        android:id="@+id/create_team_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center_horizontal"
        android:onClick="onCreateTeamClick" />


</LinearLayout>
